@@ -1,4 +1,8 @@
-/* Changes line 59 for Linux - Markus Neteler Jan 1998 */
+/*
+ * - Stefano Menegon/Lorenzo Potrich: curvatures fixed Jan 2002 
+ * - FP update Lorenzo Potrich/Markus Neteler Jan 2002
+ * - Changes line 59 for Linux - Markus Neteler Jan 1998 
+ */
 /*****************************************************************************/
 /***                                                                       ***/
 /***                                param()                                ***/
@@ -46,15 +50,15 @@ DCELL param(int ptype,		/* Type of terrain parameter to calculate */
 		if ((d == 0) && (e == 0))
 		    return(0.0);
 		else
-		    return(-200.0*resoln*wsize*(a*d*d + b*e*e + c*e*d) /
-			   	      ((e*e + d*d) * pow(1.0 + d*d + e*e,1.5)));
+  		    return(-2.0*(a*d*d + b*e*e + c*e*d) / 
+  			   	      ((e*e + d*d) * pow(1.0 + d*d + e*e,1.5))); 
 		break;
 
 	case PLANC:
 		if ((d == 0) && (e == 0))
 		    return(0.0);
 		else
-		    return(200.0*resoln*wsize*(b*d*d + a*e*e - c*d*e) /
+		    return(2.0*(b*d*d + a*e*e - c*d*e) /
 		 		        pow(e*e + d*d,1.5));
 		break;
 
@@ -62,18 +66,18 @@ DCELL param(int ptype,		/* Type of terrain parameter to calculate */
 		if ((d == 0) && (e ==0))
 		    return(0.0);
 		else	
-		    return(-20.0*resoln*wsize*(a*d*d + b*e*e + c*d*e)/(d*d + e*e));
+		    return(-2.0*(a*d*d + b*e*e + c*d*e)/(d*d + e*e));
 	case CROSC:
 		if ((d == 0) && (e ==0))
 		    return(0.0);
 		else	
-		    return(-20.0*resoln*wsize*(b*d*d + a*e*e - c*d*e)/(d*d + e*e));
+		    return(-2.0*(b*d*d + a*e*e - c*d*e)/(d*d + e*e));
 
 	case MINIC:
-		return(20.0*resoln*wsize*(-a-b-sqrt((a-b)*(a-b) + c*c)));
+		return(-a-b-sqrt((a-b)*(a-b) + c*c));
 
 	case MAXIC:
-		return(20.0*resoln*wsize*(-a-b+sqrt((a-b)*(a-b) + c*c)));
+		return(-a-b+sqrt((a-b)*(a-b) + c*c));
 
 	default:
 		return(0.0);
